@@ -1,5 +1,7 @@
+
 2.0.11 not released
 
+	* fix integer overflow in piece picker
 	* torrent_status::num_pieces counts pieces passed hash check, as documented
 
 2.0.10 released
